<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_lead"
        android:icon="@drawable/ic_lead"
        android:title="@string/title_lead" />

    <item
        android:id="@+id/nav_site"
        android:icon="@drawable/site"
        android:title="@string/title_site_visit" />

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />
<!--    <item-->
<!--        android:id="@+id/nav_settings"-->
<!--        android:icon="@drawable/ic_setting"-->
<!--        android:title="@string/title_setting" />-->
    <item
        android:id="@+id/nav_dialer"
        android:icon="@drawable/ic_dialer"
        android:title="@string/title_dialer" />
</menu>