<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="#dee7de"
    android:scrollbars="none"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:paddingVertical="@dimen/dim_8">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:tint="@color/black" />

        <TextView
            android:layout_toEndOf="@+id/ivBack"
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingExtra="@dimen/dim_4"
            android:text="@string/str_sim_card_manager"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_16"
            android:textStyle="bold" />

    </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_20">

            <!-- SIM1 Card -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                android:background="@color/white"
                android:layout_marginBottom="12dp"
               >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/sim1"/>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="12dp">

                        <TextView
                            android:id="@+id/sim1_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:textSize="16sp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/sim1_operator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:textSize="14sp"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/sim1_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        android:textAllCaps="false"
                        android:padding="4dp"
                        android:textSize="12sp"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:backgroundTint="@color/white"
                        android:background="@drawable/round_button" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sim1_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- SIM2 Card -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                android:background="@color/white"
                android:layout_marginBottom="24dp"
              >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/sim2"/>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="12dp">

                        <TextView
                            android:id="@+id/sim2_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:textSize="16sp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/sim2_operator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:textSize="14sp"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                    <Button
                        android:id="@+id/sim2_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="EDIT"
                        android:textAllCaps="false"
                        android:padding="4dp"
                        android:textSize="12sp"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:backgroundTint="@color/white"
                        android:background="@drawable/round_button"  />


                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sim2_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- "How does it work?" Section -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                android:background="@color/white"
              >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_does_it_work"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/when_enabled_all_incoming_and_outgoing_call_history_will_sync_with_your_crm_for_a_specific_contact"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>